# nonebot-plugin-autohelp

./: .gitignore  README.md  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: routine-tests.yml
nonebot_plugin_autohelp/: __init__.py  fetch_plugin_info.py  nonebot_plugin_autohelp.py  nonebot_plugin_autohelp.py-  parse_cmd.py
tests/: test_nonebot_plugin_autohelp.py
