[tool.poetry]
name = "nonebot-plugin-autohelp"
version = "0.1.7"
description = "nonebot2 plugin 自动生成载入插件的帮助信息，响应 /help !help help 菜单 caidan /i"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/nonebot-plugin-autohelp"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8.0"
# python = "^3.6.7"
logzero = "^1.7.0"
nonebot2 = "^2.0.0-alpha.16"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
test = "pytest tests"
build = "poetry build"
_publish = "poetry publish"
release = ["test", "build", "_publish"]
lint = { cmd = "pylint nonebot_plugin_autohelp" }
format = "black tests nonebot_plugin_autohelp"
tunnel = {cmd ="ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
pep257 = "^0.7.0"
tbump = "^6.3.2"
poethepoet = "^0.10.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
